# Promice

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py  test_remote.py  verify_reactivity_demo.py
artifacts/results/: inference_results.json
env/: __init__.py  cicd_env.py  models.py  procedural.py  tasks.py
scripts/: validate-submission.sh
server/: app.py
tests/: test_all.py  test_remote.py
